# P7_V2

./: README.md  run_summit.sh  run_summit_sim.bat  run_summit_sim.sh
docker/: Dockerfile
src/: .rosinstall  test_map.pgm
src/mapping/: CMakeLists.txt  package.xml
src/mapping/config/: base_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/mapping/launch/: move_base_global.launch  multi_map_rtap.launch  multi_map_toolbox.launch
src/mapping/scripts/: cbf_drone_comm.py  cbf_safety_filter.py  costmap_combiner.py  costmap_controller.py  input_vector_vis.py  placeholder.py  robot_boundry_vis.py
src/mapping/scripts/backups/: costmap_combiner.py  costmap_controller.py  costmap_controller_test1.py  costmap_controller_test2.py
src/mapping/src/: lpa_star_planner.cpp  map_aggregator.cpp
src/mapping/worlds/: Test_world
src/mapping/worlds/models/ArenaWalls/: model.config  model.sdf
src/mapping/worlds/models/U-shape/: model.sdf
src/offboard_py/scripts/: offb_node.py
src/px4_wrapper/: CMakeLists.txt  package.xml
src/px4_wrapper/launch/: sitl.launch
src/px4_wrapper/scripts/: run_px4.sh
src/robotnik_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/robotnik_msgs/.github/: Jenkinsfile
src/robotnik_msgs/action/: SetElevator.action
src/robotnik_msgs/msg/: AlarmSensor.msg  Alarms.msg  (+56 more)
src/robotnik_sensors/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/summit_xl_common/: .gitignore  LICENSE  README.md
src/summit_xl_sim/: .dockerignore  CHANGELOG.md  LICENSE  README.md
src/summit_xl_tools/: CMakeLists.txt  package.xml
src/x500_py/: CMakeLists.txt  package.xml
(+329 files in other folders)
